test/tests/stages/9_functions/valid/arguments_in_registers/parameter_shadows_function.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[3]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: a
        List[0]: 
        CB: 
          List[1]: 
            CS: 
              CReturn: 
                CConstant: 
                  CConstInt: 
                    TInt: 1
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: b
        List[1]: 
          TIdentifier: a
        CB: 
          List[1]: 
            CS: 
              CReturn: 
                CVar: 
                  TIdentifier: a
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[1]: 
            Int: 
          Int: 
        None: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[1]: 
            CS: 
              CReturn: 
                CBinary: 
                  CAdd: 
                  CFunctionCall: 
                    TIdentifier: a
                    List[0]: 
                    None: 
                  CFunctionCall: 
                    TIdentifier: b
                    List[1]: 
                      CConstant: 
                        CConstInt: 
                          TInt: 2
                        None: 
                    None: 
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
