test/tests/stages/9_functions/invalid_types/too_few_args.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[2]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: foo
        List[2]: 
          TIdentifier: a
          TIdentifier: b
        CB: 
          List[1]: 
            CS: 
              CReturn: 
                CBinary: 
                  CAdd: 
                  CVar: 
                    TIdentifier: a
                    None: 
                  CConstant: 
                    CConstInt: 
                      TInt: 1
                    None: 
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[2]: 
            Int: 
            Int: 
          Int: 
        None: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[1]: 
            CS: 
              CReturn: 
                CFunctionCall: 
                  TIdentifier: foo
                  List[1]: 
                    CConstant: 
                      CConstInt: 
                        TInt: 1
                      None: 
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
